# puzzles.rs

./: .cursorrules  .gitignore  .mailmap  Cargo.toml  LICENSE  README.md  add_puzzle.sh  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
events.old/2015/day01/src/: main.rs
events.old/2015/day02/src/: main.rs
events.old/2015/day03/src/: main.rs
events.old/2015/day04/src/: main.rs
events.old/2015/day05/src/: main.rs
events.old/2015/day06/: Cargo.toml
events.old/2015/day08/: Cargo.toml
events.old/2015/day09/: Cargo.toml
events.old/2015/day09/src/: main.rs
events.old/2015/day11/: Cargo.toml
events.old/2015/day11/src/: main.rs
events.old/2015/day12/: Cargo.toml
events.old/2015/day12/src/: main.rs
events.old/2015/day13/src/: main.rs
events.old/2015/day14/: Cargo.toml
events.old/2015/day16/: Cargo.toml
events.old/2015/day16/src/: main.rs
events.old/2022/day01/src/: main.rs
events/2015/day01/: Cargo.toml
events/2015/day01/src/: main.rs
events/2015/day02/: Cargo.toml
events/2015/day02/src/: main.rs
events/2015/day03/: Cargo.toml
events/2015/day03/src/: main.rs
events/2015/day04/: Cargo.toml
events/2015/day04/src/: main.rs
events/2015/day05/: Cargo.toml
events/2015/day05/src/: main.rs
events/2015/day06/src/: main.rs
events/2015/day07/: Cargo.toml
events/2015/day07/src/: main.rs
events/2015/day08/src/: main.rs
events/2015/day10/: Cargo.toml
events/2015/day10/src/: main.rs
events/2015/day11/src/: main.rs
events/2015/day13/: Cargo.toml
events/2015/day14/src/: main.rs
events/2015/day15/: Cargo.toml
events/2015/day15/src/: main.rs
events/2015/day17/: Cargo.toml
events/2015/day17/src/: main.rs
events/2022/day01/: Cargo.toml
example/: main.rs
lib/input_reader/: Cargo.toml  Plan.md  README.md
lib/input_reader/src/: args.rs  lib.rs  paths.rs  terminal.rs  types.rs
puzzle/advent_of_code/2015/day01/: Cargo.toml  (+1 more)
puzzles/advent_of_code/2015/day01_common/: Cargo.toml
puzzles/advent_of_code/2015/day01_common/src/: lib.rs
puzzles/advent_of_code/2015/day01_part2/: Cargo.toml
puzzles/advent_of_code/2015/day01_part2/src/: main.rs
puzzles/advent_of_code/data/: README.md  input.txt
puzzles/advent_of_code/data_loader/: Cargo.toml
(+67 files in other folders)
